# oppenbokforing

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORT-MANIFEST.txt  LICENSE  README.md  SECURITY.md  flake.nix  index.html  package-lock.json  package.json  swedish-sole-trader-plan-detailed.md  swedish-sole-trader-plan.md  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 202607050001_initial.sql  202607070001_seed_2026_rules.sql  202607080001_m2_invoicing.sql  202607080002_m2_idempotency_guards.sql  202607080003_m3_documents_imports_reconciliation.sql  202607080004_reconciliation_payment_guards.sql  202607080005_m4_vat_cash.sql  202607080006_voucher_accounting_date.sql  202607080007_m5_year_end.sql  202607100001_m6_workspace_settings.sql  202607100002_m7_ledger_read_indexes.sql  202607100003_invoice_pdf_document.sql  202607100004_workspace_path_settings.sql  202607110001_dashboard_tour.sql  202607110002_simple_mode.sql
src-tauri/src/: bindings.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/accountant_package/: mod.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/backup/: crypto.rs  mod.rs
src-tauri/src/cashflow/: mod.rs
src-tauri/src/compliance/: mod.rs
src-tauri/src/counterparties/: mod.rs
src-tauri/src/documents/: mod.rs
src-tauri/src/expenses/: mod.rs
src-tauri/src/imports/: mod.rs
src-tauri/src/integrations/: bankid.rs  mod.rs  open_banking.rs
src-tauri/tests/: backup_encryption.rs  backup_idempotency.rs  golden_scenarios.rs  invoice_idempotency.rs  invoice_pdf_jobs.rs  local_jobs_idempotency.rs  m3_milestone.rs  m3_regression.rs  m4_milestone.rs  m5_milestone.rs  m6_milestone.rs  m7_read_commands.rs  m8_milestone.rs  profile_audit.rs
(+121 files in other folders)
